[gd_scene load_steps=10 format=3]

[ext_resource type="Script" path="res://Monster.gd" id="1_6sl2h"]
[ext_resource type="Texture2D" uid="uid://cugnyr857urqq" path="res://pictures_test/tail_monster1.png" id="2_jtmqh"]
[ext_resource type="Texture2D" uid="uid://cuwjrhtypqv3k" path="res://pictures_test/tail_monster2.png" id="3_qchr7"]
[ext_resource type="AudioStream" uid="uid://8igpilf55ke7" path="res://sounds/monster_waves.mp3" id="3_we5yc"]
[ext_resource type="AudioStream" uid="uid://ycgu0rt1uy03" path="res://sounds/rev.mp3" id="4_h02ip"]
[ext_resource type="Texture2D" uid="uid://bk4jujl23up2d" path="res://pictures_test/tail_monster3.png" id="4_swkw4"]
[ext_resource type="Texture2D" uid="uid://30dfo38fyp48" path="res://pictures_test/tail_monster4.png" id="5_i3vn3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hqbwu"]
size = Vector2(225, 93)

[sub_resource type="SpriteFrames" id="SpriteFrames_ld82j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_jtmqh")
}, {
"duration": 1.0,
"texture": ExtResource("3_qchr7")
}, {
"duration": 1.0,
"texture": ExtResource("4_swkw4")
}, {
"duration": 1.0,
"texture": ExtResource("5_i3vn3")
}, {
"duration": 1.0,
"texture": ExtResource("4_swkw4")
}, {
"duration": 1.0,
"texture": ExtResource("3_qchr7")
}],
"loop": true,
"name": &"fly",
"speed": 1.0
}]

[node name="monster" type="RigidBody2D"]
gravity_scale = 0.0
script = ExtResource("1_6sl2h")

[node name="monster" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="monster"]
position = Vector2(102.5, -36.5)
shape = SubResource("RectangleShape2D_hqbwu")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="monster"]
z_index = -30
sprite_frames = SubResource("SpriteFrames_ld82j")
animation = &"fly"
frame_progress = 0.847654

[node name="TimerPlavnikov" type="Timer" parent="monster"]
wait_time = 3.0

[node name="TimerAnger" type="Timer" parent="monster"]
wait_time = 10.0

[node name="Label" type="Label" parent="monster"]
offset_right = 40.0
offset_bottom = 23.0

[node name="plovnik" type="AudioStreamPlayer2D" parent="monster"]
stream = ExtResource("3_we5yc")

[node name="TimerReva" type="Timer" parent="monster"]
wait_time = 7.0

[node name="rev" type="AudioStreamPlayer2D" parent="monster"]
stream = ExtResource("4_h02ip")
max_distance = 5000.0

[node name="TimerBegin" type="Timer" parent="monster"]
wait_time = 8.0
one_shot = true

[connection signal="area_entered" from="monster" to="." method="_on_monster_area_entered"]
[connection signal="timeout" from="monster/TimerPlavnikov" to="." method="_on_timer_plavnikov_timeout"]
[connection signal="timeout" from="monster/TimerAnger" to="." method="_on_timer_anger_timeout"]
[connection signal="timeout" from="monster/TimerReva" to="." method="_on_timer_reva_timeout"]
[connection signal="timeout" from="monster/TimerBegin" to="." method="_on_timer_begin_timeout"]
